--- a/styles/global.css
+++ b/styles/global.css
@@ -109,10 +109,9 @@ body {
 /* Home page */
 
 .cover {
-	background-image: url('/events/cover6.jpg');
+	background-image: url('/events/cover.jpg');
 	background-position: center;
 	background-size: cover;
-	background-attachment: fixed;
 	background-repeat: no-repeat;
 }
 
