--- a/styles/global.css
+++ b/styles/global.css
@@ -113,7 +113,9 @@ body {
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
+
 
 .swiper {
 	width: 100%;
