--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script:regular,500,600,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat+Alternates:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
 body {
 	overflow-x: hidden;
@@ -19,6 +20,10 @@ body {
 
 .dancing {
 	font-family: 'dancing script';
+}
+
+.montserrat {
+	font-family: 'Montserrat Alternates';
 }
 
 /* Navbar */
@@ -78,7 +83,7 @@ body {
 /* Home page */
 
 .cover {
-	background-image: url('/events/cover4.jpg');
+	background-image: url('/events/cover.jpg');
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -124,4 +129,10 @@ body {
 .form-footer {
 	backdrop-filter: blur(.625rem);
 	background-image: none;
+}
+
+.text-gradient {
+	background-image: linear-gradient(to right, rgb(60, 126, 250), rgb(51, 0, 190));
+	color: transparent;
+	background-clip: text;
 }
