--- a/styles/global.css
+++ b/styles/global.css
@@ -83,7 +83,7 @@ body {
 /* Home page */
 
 .cover {
-	background-image: url('/event/cover3.jpg');
+	background-image: url('/events/cover3.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
