--- a/styles/global.css
+++ b/styles/global.css
@@ -26,6 +26,12 @@ body {
 	font-family: 'Montserrat Alternates';
 }
 
+@media screen and (max-width: 30rem) {
+	html {
+		font-size: 14px;
+	}
+}
+
 /* Navbar */
 
 @media screen and (min-width: 1024px) {
