--- a/styles/global.css
+++ b/styles/global.css
@@ -96,7 +96,6 @@ body {
 	filter: brightness(0.5);
 }
 
-
 .swiper {
 	width: 100%;
 	padding-top: 50px;
@@ -121,7 +120,6 @@ body {
 	background: white;
 }
 
-
 /* Form */
 
 .formbg {
@@ -133,12 +131,16 @@ body {
 }
 
 .form-footer {
-	backdrop-filter: blur(.625rem);
+	backdrop-filter: blur(0.625rem);
 	background-image: none;
 }
 
 .text-gradient {
-	background-image: linear-gradient(to right, rgb(60, 126, 250), rgb(51, 0, 190));
+	background-image: linear-gradient(
+		to right,
+		rgb(60, 126, 250),
+		rgb(51, 0, 190)
+	);
 	color: transparent;
 	background-clip: text;
 }
