--- a/styles/global.css
+++ b/styles/global.css
@@ -144,3 +144,19 @@ body {
 	color: transparent;
 	background-clip: text;
 }
+
+/* Animation */
+.modal-enter {
+  opacity: 0;
+}
+.modal-enter-active {
+  opacity: 1;
+  transition: opacity 300ms;
+}
+.modal-exit {
+  opacity: 1;
+}
+.modal-exit-active {
+  opacity: 0;
+  transition: opacity 300ms;
+}
