--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,10 @@
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script:regular,500,600,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat+Alternates:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	overflow-x: hidden;
 }
@@ -52,9 +56,20 @@ body {
 		transition: all 0.25s ease-in;
 		border-radius: 100vw;
 	}
+
 	.nav-links > div:hover {
 		color: #fff;
 	}
+
+	.nav-links > .login::after {
+		background-color: transparent;
+	}
+
+	.nav-links > .login:hover {
+		color: blue;
+		transform: scale(1.05);
+	}
+
 	.nav-links > div:hover::after {
 		width: 70%;
 	}
@@ -147,16 +162,16 @@ body {
 
 /* Animation */
 .modal-enter {
-  opacity: 0;
+	opacity: 0;
 }
 .modal-enter-active {
-  opacity: 1;
-  transition: opacity 300ms;
+	opacity: 1;
+	transition: opacity 300ms;
 }
 .modal-exit {
-  opacity: 1;
+	opacity: 1;
 }
 .modal-exit-active {
-  opacity: 0;
-  transition: opacity 300ms;
+	opacity: 0;
+	transition: opacity 300ms;
 }
