--- a/styles/global.css
+++ b/styles/global.css
@@ -29,6 +29,9 @@ body {
 .montserrat {
 	font-family: 'Montserrat Alternates';
 }
+.poppins{
+	font-family: 'poppins';
+}
 
 @media screen and (max-width: 30rem) {
 	html {
@@ -174,4 +177,12 @@ body {
 .modal-exit-active {
 	opacity: 0;
 	transition: opacity 300ms;
+}
+
+.profile-bg{
+	background-image: url('/form/formbg.svg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
 }
