--- a/styles/global.css
+++ b/styles/global.css
@@ -93,15 +93,15 @@ body {
 	background-size: cover;
 }
 
-.out-cover {
+.outer-cover {
 	background-color: #3b82f6;
 	border-bottom-color: transparent;
 }
 
-.in-cover {
+.inner-cover {
 	background-color: transparent;
-	backdrop-filter: blur(0.75rem);
 	border-bottom-color: #aaa;
+	backdrop-filter: blur(12px);
 }
 
 /* Navbar end */
