--- a/styles/global.css
+++ b/styles/global.css
@@ -183,7 +183,7 @@ body {
 }
 
 .profile-bg{
-	background-image: url('/form/formbg.svg');
+	background-image: url('/form/form_cover.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
