--- a/styles/global.css
+++ b/styles/global.css
@@ -182,10 +182,22 @@ body {
 	transition: opacity 300ms;
 }
 
+/*  Profile */
+
 .profile-bg{
 	background-image: url('/form/form_cover.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
+	background-attachment: fixed;
+}
+
+/* About */
+
+.aboutbg {
+	background-image: url('/about/aboutbg.jpg');
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
