--- a/styles/global.css
+++ b/styles/global.css
@@ -121,33 +121,37 @@ body {
 	background-attachment: fixed;
 }
 
+.cover-heading{
+	text-shadow: 8px 8px 0.5rem #222;
+}
+
 .scroll {
-	width: 40px;
-	height: 60px;
-	border: 3px solid #ddd;
-	border-radius: 60px;
+	width: 2.25rem;
+	height: 3.5rem;
+	border: 0.1875rem solid #ddd;
+	border-radius: 3.75rem;
 	position: relative;
 }
 
 .scroll::before {
 	content: '';
-	width: 8px;
-	height: 8px;
+	width: 0.5rem;
+	height: 0.5rem;
 	position: absolute;
-	top: 10px;
+	top: 0.625rem;
 	left: 50%;
 	transform: translateX(-50%);
 	background-color: #ddd;
 	border-radius: 50%;
 	opacity: 1;
-	animation: wheel 2.5s infinite;
-	-webkit-animation: wheel 2.5s infinite;
+	animation: wheel 2s infinite;
+	-webkit-animation: wheel 2s infinite;
 }
 
 @keyframes wheel {
 	to {
 		opacity: 0;
-		top: 40px;
+		top: 2.25rem;
 	}
 }
 
