--- a/styles/global.css
+++ b/styles/global.css
@@ -4,109 +4,113 @@
 @import url(https://fonts.googleapis.com/css?family=Kalam:300,regular,700);
 
 html {
-	scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-	overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 *,
 *::after,
 *::before {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: Poppins;
-	-webkit-tap-highlight-color: transparent;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Poppins;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* fonts */
 
 .dancing {
-	font-family: 'dancing script';
+  font-family: "dancing script";
 }
 
 .montserrat {
-	font-family: 'Montserrat Alternates';
+  font-family: "Montserrat Alternates";
 }
 .poppins {
-	font-family: 'Poppins';
+  font-family: "Poppins";
 }
 .kalam {
-	font-family: 'kalam';
+  font-family: "kalam";
 }
 
 @media screen and (max-width: 30rem) {
-	html {
-		font-size: 13px;
-	}
+  html {
+    font-size: 13px;
+  }
 }
 
 /* Navbar */
 
 @media screen and (min-width: 1024px) {
-	.nav-links > div {
-		position: relative;
-		overflow: hidden;
-		transition: all 0.2s ease-in;
-	}
-	.nav-links > div::after {
-		content: '';
-		width: 0;
-		height: 3px;
-		position: absolute;
-		background-color: #ddd;
-		bottom: 0;
-		left: 50%;
-		transform: translateX(-50%);
-		transition: all 0.25s ease-in;
-		border-radius: 100vw;
-	}
+  .nav-links > div {
+    position: relative;
+    overflow: hidden;
+    transition: all 0.2s ease-in;
+  }
+  .nav-links > div::after {
+    content: "";
+    width: 0;
+    height: 3px;
+    position: absolute;
+    background-color: #ddd;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: all 0.25s ease-in;
+    border-radius: 100vw;
+  }
 
-	.nav-links > div:hover {
-		color: #fff;
-	}
+  .nav-links > div:hover {
+    color: #fff;
+  }
 
-	.nav-links > .login::after {
-		background-color: transparent;
-	}
+  .nav-links > .login::after {
+    background-color: transparent;
+  }
 
-	.nav-links > .login:hover {
-		color: blue;
-		transform: scale(1.05);
-	}
+  .nav-links > .login:hover {
+    color: blue;
+    transform: scale(1.05);
+  }
 
-	.nav-links > div:hover::after {
-		width: 70%;
-	}
+  .nav-links > div:hover::after {
+    width: 70%;
+  }
 
-	.services-div > div:hover {
-		color: #fff;
-	}
+  .services-div > div:hover {
+    color: #fff;
+  }
 
-	.services > * {
-		color: #666;
-	}
+  .services > * {
+    color: #666;
+  }
 }
 
 .spacer {
-	width: 100%;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .outer-cover {
-	background-color: #3b82f6;
-	border-bottom-color: transparent;
-	backdrop-filter: blur(12px);
+  background-color: #3b82f6;
+  border-bottom-color: transparent;
+  backdrop-filter: blur(12px);
 }
 
 .inner-cover {
-	background-color: transparent;
-	border-bottom-color: #aaa;
-	backdrop-filter: blur(12px);
+  background-color: transparent;
+  border-bottom-color: #aaa;
+  backdrop-filter: blur(12px);
+}
+
+.logo:hover {
+  text-shadow: 0px 0px 0.5rem #fff;
 }
 
 /* Navbar end */
@@ -114,133 +118,133 @@ body {
 /* Home page */
 
 .cover {
-	background-image: url('/events/cover2.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	filter: brightness(0.4);
-	background-attachment: fixed;
+  background-image: url("/events/cover2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: brightness(0.4);
+  background-attachment: fixed;
 }
 
-.cover-heading{
-	text-shadow: 8px 8px 0.5rem #222;
+.cover-heading {
+  text-shadow: 8px 8px 0.5rem #222;
 }
 
 .scroll {
-	width: 2.25rem;
-	height: 3.5rem;
-	border: 0.1875rem solid #ddd;
-	border-radius: 3.75rem;
-	position: relative;
+  width: 2.25rem;
+  height: 3.5rem;
+  border: 0.1875rem solid #ddd;
+  border-radius: 3.75rem;
+  position: relative;
 }
 
 .scroll::before {
-	content: '';
-	width: 0.5rem;
-	height: 0.5rem;
-	position: absolute;
-	top: 0.625rem;
-	left: 50%;
-	transform: translateX(-50%);
-	background-color: #ddd;
-	border-radius: 50%;
-	opacity: 1;
-	animation: wheel 2s infinite;
-	-webkit-animation: wheel 2s infinite;
+  content: "";
+  width: 0.5rem;
+  height: 0.5rem;
+  position: absolute;
+  top: 0.625rem;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #ddd;
+  border-radius: 50%;
+  opacity: 1;
+  animation: wheel 2s infinite;
+  -webkit-animation: wheel 2s infinite;
 }
 
 @keyframes wheel {
-	to {
-		opacity: 0;
-		top: 2.25rem;
-	}
+  to {
+    opacity: 0;
+    top: 2.25rem;
+  }
 }
 
 .client-swiper {
-	width: 100%;
-	padding-top: 50px;
-	padding-bottom: 50px;
-	max-width: 70rem;
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  max-width: 70rem;
 }
 
 .client-swiper .swiper-slide {
-	display: flex;
-	justify-content: center;
-	border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
 }
 
 .client-swiper .swiper-slide div {
-	opacity: 0.9;
-	filter: blur(1px);
+  opacity: 0.9;
+  filter: blur(1px);
 }
 
 .client-swiper .swiper-slide-active div {
-	filter: blur(0px);
-	opacity: 1;
-	background: white;
+  filter: blur(0px);
+  opacity: 1;
+  background: white;
 }
 
 /* Form */
 
 .formbg {
-	background-image: url('/form/formbg.svg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	background-attachment: fixed;
+  background-image: url("/form/formbg.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .form-footer {
-	backdrop-filter: blur(0.625rem);
-	background-image: none;
+  backdrop-filter: blur(0.625rem);
+  background-image: none;
 }
 
 .text-gradient {
-	background-image: linear-gradient(
-		to right,
-		rgb(60, 126, 250),
-		rgb(51, 0, 190)
-	);
-	color: transparent;
-	background-clip: text;
+  background-image: linear-gradient(
+    to right,
+    rgb(60, 126, 250),
+    rgb(51, 0, 190)
+  );
+  color: transparent;
+  background-clip: text;
 }
 
 /* Animation */
 
 .modal-enter {
-	opacity: 0;
+  opacity: 0;
 }
 .modal-enter-active {
-	opacity: 1;
-	transition: opacity 300ms;
+  opacity: 1;
+  transition: opacity 300ms;
 }
 .modal-exit {
-	opacity: 1;
+  opacity: 1;
 }
 .modal-exit-active {
-	opacity: 0;
-	transition: opacity 300ms;
+  opacity: 0;
+  transition: opacity 300ms;
 }
 
 /*  Profile */
 
 .profile-bg {
-	background-image: url('/form/form_cover.png');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	background-attachment: fixed;
+  background-image: url("/form/form_cover.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 /* About */
 
 .aboutbg {
-	background-image: url('/about/aboutbg.jpg');
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+  background-image: url("/about/aboutbg.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .event-card {
-	background-color: #fff;
+  background-color: #fff;
 }
