--- a/styles/global.css
+++ b/styles/global.css
@@ -113,6 +113,10 @@ body {
   text-shadow: 0px 0px 0.5rem #fff;
 }
 
+.logo {
+  transition: all 0.2s ease-in;
+}
+
 /* Navbar end */
 
 /* Home page */
