--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script:regular,500,600,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat+Alternates:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
-@import url(https://fonts.googleapis.com/css?family=Kalam:300,regular,700);
+@import url(https://fonts.googleapis.com/css?family=Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Condensed:regular);
 
 html {
   scroll-behavior: smooth;
@@ -26,15 +27,17 @@ body {
 .dancing {
   font-family: "dancing script";
 }
-
 .montserrat {
   font-family: "Montserrat Alternates";
 }
 .poppins {
   font-family: "Poppins";
 }
-.kalam {
-  font-family: "kalam";
+.raleway {
+  font-family: "Raleway";
+}
+.ubuntu {
+  font-family: "Ubuntu Condensed";
 }
 
 @media screen and (max-width: 30rem) {
