--- a/styles/loader.css
+++ b/styles/loader.css
@@ -20,21 +20,21 @@
     left: 0%;
     top: 0%;
     animation: rotate-one 1s linear infinite;
-    border-bottom: 6px solid #2196f3;
+    border-bottom: 6px solid #0f7fc0;
   }
   
   .inner.two {
     right: 0%;
     top: 0%;
     animation: rotate-two 1s linear infinite;
-    border-right: 6px solid #0e7cdd;
+    border-right: 6px solid #0f7fc0;
   }
   
   .inner.three {
     right: 0%;
     bottom: 0%;
     animation: rotate-three 1s linear infinite;
-    border-top: 6px solid #5030df;
+    border-top: 6px solid #0f7fc0;
   }
   
   @keyframes rotate-one {
